# atom-to-atom-mapping

./: README.md  environment.yaml  setup.cfg
atom_to_atom_mapping/: __init__.py
atom_to_atom_mapping/base/: __init__.py  base.py
atom_to_atom_mapping/chytorch_rxnmap/: __init__.py  chytorch_rxnmap.py
atom_to_atom_mapping/indigo/: __init__.py  indigo.py
atom_to_atom_mapping/local_mapper/: __init__.py  local_mapper.py
atom_to_atom_mapping/rxnmapper/: __init__.py  rxnmapper.py
atom_to_atom_mapping/utility/: __init__.py  chytorch_rxnmap.py  indigo.py  local_mapper.py  rxnmapper.py
atom_to_atom_mapping/utility/abstract_base/: __init__.py  abstract_base.py
atom_to_atom_mapping/utility/chytorch/: __init__.py  rxnmap.py
atom_to_atom_mapping/utility/cimm_kfu/: __init__.py  chytorch_rxnmap.py
atom_to_atom_mapping/utility/epam/: __init__.py  indigo.py
atom_to_atom_mapping/utility/ibm_rxn4chemistry/: __init__.py  rxnmapper.py
atom_to_atom_mapping/utility/micc_snu/: __init__.py  local_mapper.py
references/: 20171116_coley_c_w_et_al.md  20190329_jaworski_w_et_al.md  20210407_schwaller_p_et_al.md  20220706_nugmanov_r_et_al.md  20240313_chen_s_et_al.md
references/2019/: 20190329_jaworski_w_et_al.md
references/2021/: 20210407_schwaller_p_et_al.md  20211102_lin_a_et_al.md
references/2022/: 20220706_nugmanov_r_et_al.md
references/2024/: 20240313_chen_s_et_al.md
scripts/: map_reaction_smiles_strings.py  map_reaction_smiles_using_chytorch_rxnmap.py  map_reaction_smiles_using_indigo.py  map_reaction_smiles_using_local_mapper.py  map_reaction_smiles_using_rxnmapper.py  map_reactions.py
