[metadata]
name = atom_to_atom_mapping
version = 2024.07.1
author = Haris Hasic
description = The chemical reaction compound atom-to-atom mapping package.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: LICENSE
keywords =
    atom-to-atom-mapping,
    chemical-compounds,
    chemical-reactions,
    chemical-synthesis,
    chemoinformatics,
    chytorch-rxnmap,
    epam-indigo,
    local-mapper,
    retrosynthesis,
    retrosynthetic-analysis,
    rxnmapper

[options]
packages = find:

[options.packages.find]
include =
    atom_to_atom_mapping
exclude =
    data,
    references,
    scripts
