[metadata]
name = atom_to_atom_mapping
version = 2024.7.1
author = Haris Hasic
description = The chemical reaction compound atom-to-atom mapping project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: LICENSE
keywords =
    atom-mapping,
    atom-to-atom-mapping,
    chemical-reactions,
    chemoinformatics,
    chytorch-rxnmap,
    indigo,
    local-mapper,
    rxnmapper

[options]
packages = find:

[options.packages.find]
include =
    atom_to_atom_mapping
exclude =
    data,
    scripts
