[metadata]
name = atom_to_atom_mapping
version = 2025.4.1
author = Haris Hasic
description = The chemical reaction compound Atom-to-atom Mapping research project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    atom-mapping,
    atom-to-atom-mapping,
    chemical-compounds,
    chemical-reactions

[options]
packages = find:

[options.packages.find]
include = atom_to_atom_mapping*
